# Controleur

./: CMakeLists.txt  README.md  partitions.csv  sdkconfig copy  sdkconfig.defaults
box/: Boxes.scad  Waveshare.scad  bottomWaveshare.stl  topWaveshare.stl
components/espressif__esp_lcd_touch_gt911/: esp_lcd_touch_gt911.c
docs/fr/: index.md
font/: my_lv_font_montserrat_18.c
img/: img_arrow_bottom_left.c  img_arrow_bottom_right.c  img_arrow_down.c  img_arrow_left.c  img_arrow_right.c  img_arrow_top_left.c  img_arrow_top_right.c  img_arrow_up.c  img_center.c  img_corner.c  img_execute.c  img_file.c  img_focus.c  img_folder.c  img_folder_up.c  img_home.c  img_marker.c  img_square.c  img_unlock.c
main/: CMakeLists.txt  gt911.c  gt911.h  hardLvgl.c  hardLvgl.h  hardware.c  hardware.h  i2c.c  i2c.h  idf_component.yml  ioExpander.cpp  languages.c  languages.h  main.c  nvsFlash.c  nvsFlash.h  rgbPanel.c  rgbPanel.h  sdCard.c  sdCard.h  usb.cpp
