idf_component_register(SRCS "languages.c" "nvsFlash.c" "sdCard.c" "hardLvgl.c" "rgbPanel.c" "ioExpander.cpp" 
"gt911.c" "i2c.c" "hardware.c" "main.c" "usb.cpp" "nvsFlash.c" "languages.c"
"../img/img_arrow_down.c" "../img/img_arrow_left.c" "../img/img_arrow_right.c" "../img/img_arrow_up.c" 
"../img/img_home.c" "../img/img_folder.c" "../img/img_folder_up.c" "../img/img_file.c" 
"../img/img_unlock.c" "../img/img_marker.c" "../img/img_focus.c" "../img/img_square.c" 
"../img/img_center.c" "../img/img_execute.c" "../img/img_corner.c"  "../img/img_arrow_bottom_left.c"
"../img/img_arrow_bottom_right.c" "../img/img_arrow_top_left.c" "../img/img_arrow_top_right.c"
"../font/my_lv_font_montserrat_18.c"
                    INCLUDE_DIRS ".")